# mainloop

./: .editorconfig  .env.example  .gitignore  .mcp.json  .prettierignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE.md  MEMORY_STRATEGY.md  Makefile  README.md  docker-compose.test.yml  docker-compose.yml  linkedin-launch-post.md  mobile  package.json  pnpm-lock.yaml  task-766584ea-completed.md  test-worker-output.txt  test.txt
.github/workflows/: ci.yml  e2e-kind.yml
.trunk/: trunk.yaml
backend/: .env.example  Dockerfile  README.md  entrypoint.sh  pyproject.toml
backend/scripts/: test_k8s_components.py  test_worker_e2e.py
backend/src/mainloop/: __init__.py  api.py  bigquery.py  claude_agent.py  config.py  models.py  sse.py
backend/src/mainloop/db/: __init__.py  postgres.py
backend/src/mainloop/services/: chat_handler.py  claude_agent.py  claude_mock.py  compaction.py  github_mock.py  github_pr.py  k8s_jobs.py  k8s_namespace.py  planning.py  repo_cache.py  task_router.py
backend/src/mainloop/workflows/: __init__.py  dbos_config.py  main_thread.py  worker.py
backend/tests/: test_repo_cache.py
claude-agent/: Dockerfile  README.md  entrypoint.sh  job_runner.py  pyproject.toml  server.py  test_plan_mode.py
content/devlog/: README.md  (+5 more)
docs/: DBOS.md  architecture.md  development.md
frontend/: Dockerfile  package.json  playwright.config.ts  svelte.config.js  tailwind.config.ts  wrangler.toml
models/: README.md  pyproject.toml
models/src/models/: __init__.py  agent.py  conversation.py  workflow.py
scripts/: test-guard.sh  wait-for-ready.sh
(+122 files in other folders)
