[project]
name = "mainloop-backend"
version = "0.1.0"
description = "Mainloop AI agent orchestrator backend"
readme = "README.md"
authors = [
    { name = "James Olds", email = "12104969+oldsj@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "models",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-dotenv>=1.2.1",
    "google-cloud-bigquery>=3.25.0",
    "httpx>=0.27.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.0.0",
    "claude-agent-sdk>=0.1.18",
    "asyncpg>=0.30.0",
    "dbos>=2.7.0",
    "pydantic-ai[dbos]>=1.39.0",
]

[project.scripts]
mainloop = "mainloop.api:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mainloop"]

[tool.uv.sources]
models = { path = "../models", editable = true }
